--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -4,3 +4,6 @@
 
 # Uncomment the following line to enable the Lily58 OLED Display
 # CONFIG_ZMK_DISPLAY=y
+
+# Allow higher TX power of nRF52840 chip for nice!nano
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
