Prefer BLE keystrokes, enable sleep.

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -7,3 +7,13 @@
 
 # Allow higher TX power of nRF52840 chip for nice!nano
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Configure ability to sleep
+CONFIG_ZMK_SLEEP=y
+
+# Prefer sending keys over USB
+#OUT_USB=y
+# Prefer sending keys over BLE
+OUT_BLE=y
+# Default, prefer USB when plugged in
+#OUT_TOG=y
