Setup BLE experimental passcode. My first keymap.

--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -10,3 +10,8 @@ CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Configure ability to sleep
 CONFIG_ZMK_SLEEP=y
+
+# Bluetooth configs
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
