--- a/build.yaml
+++ b/build.yaml
@@ -18,4 +18,4 @@ include:
   - board: nice_nano_v2
     shield: lily58_right
   - board: nice_nano_v2
-    shield: settings_reset
+    # shield: settings_reset
