--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -14,7 +14,7 @@ CONFIG_ZMK_SLEEP=y
 # Bluetooth configs
 CONFIG_BT=y
 CONFIG_ZMK_BLE=y
-# CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
+CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
 # NKRO
-#CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
